--- a/naruto-rpg/src/App.css
+++ b/naruto-rpg/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url('./img/pxfuel\ \(2\).jpg');
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.center {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height: 100vh;
+
 }
 
-.App-link {
-  color: #61dafb;
+.login, .linkLogin {
+  font-size: 36px;
+  color: #007bff;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputLogin {
+  width: 50%;
+  margin: 1%;
+  padding: 10px 15px;
+  font-size: 16px;
+  color: #333;
+  border: 1px solid #007bff;
+  border-radius: 5px;
+}
+
+.buttonLogin:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+  box-shadow: none;
+}
+
+.buttonLogin {
+  text-transform: uppercase;
+  margin-top: 5%;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.buttonLogin:hover {
+  background-color: #0056b3;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+}
+
+.linkLogin {
+  margin-top: 5%;
+  font-size: 15px;
+  text-decoration: none;
 }
