--- a/naruto-rpg/src/App.css
+++ b/naruto-rpg/src/App.css
@@ -169,3 +169,43 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   bottom: 20px;
 }
+
+.imgSize {
+  margin: 10%;
+  width: 60%;
+  height: 60%;
+  border: 2px solid #000000;
+}
+
+.armasContainer {
+  margin: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 17%;
+}
+
+.armas {
+  background-color: #341baf;
+  border: 3px dashed #000000;
+  margin: 2%;
+  max-width: 27%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.operacao {
+  margin: 0;
+}
+
+.operacaoBotao {
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.nomeArma {
+  text-align: center;
+}
