cria parte grafica de dinheiro na mainPage

--- a/naruto-rpg/src/App.css
+++ b/naruto-rpg/src/App.css
@@ -209,3 +209,16 @@ body {
 .nomeArma {
   text-align: center;
 }
+
+.mainMoney {
+  display: flex;
+}
+
+.iconMoney {
+  font-size: 200%;
+  padding: 3%;
+}
+
+.numMoney {
+  color: #daa520;
+}
