--- a/naruto-rpg/src/App.css
+++ b/naruto-rpg/src/App.css
@@ -242,7 +242,8 @@ body {
 .profileMoney {
   display: flex;
   margin-bottom: 3%;
-  margin-left: 30%;
+  justify-content: center;
+  margin-right: 20%;
 }
 
 .money {
